months.css
@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400;500;600&family=Comfortaa:wght@400;500;600;700&family=Montserrat:wght@100;300;400;500&family=Quicksand:wght@300;400;500&family=Raleway:wght@300;400;500;600&display=swap');

html {
	font-family: 'Lato', sans-serif;
	-webkit-font-smoothing: antialiased;
	--bg-Card: rgb(250, 250, 250);
	--border: black;
	--box-shadow: 0 3px 8px #323232, 0 4px 0px #323232;
	--line-clr:#323232;
	--line1-clr:#323232;
	--br-clr: #000;
	--card-clr: #323232;
	--time-border: #000;

}
h2{
    font-family: 'Quicksland', sans-serif;
}

body {
	font-family: 'Lato', sans-serif;
	-webkit-font-smoothing: antialiased;
}

.upcoming-events {
	padding-top: 5%;
	background-color: var(--bg1-color);
}

.upcoming-events .container {
	margin-top: 20px;
}

.font-weight-bolder {
	letter-spacing: 1px;
}

.upcoming {
	font-family: 'Montserrat', sans-serif;
	font-weight: 500;
}

.upcoming span {
	font-weight: 300;
}

.timeline {
	position: relative;
	max-width: 1200px;
	margin: 0 auto;
}

.timeline::after {
	content: '';
	position: absolute;
	width: 6px;
	background-color: var(--line-clr);
	top: 0;
	bottom: 0;
	left: 50%;
	margin-left: -3px;
	border-radius: 300px;
}

.timeline-container {
	padding: 10px 40px;
	position: relative;
	background-color: inherit;
	width: 50%;
}

.timeline-container::after {
	content: '';
	position: absolute;
	width: 30px;
	height: 30px;
	right: -16px;
	background-color: var(--line-clr);
	border: 4px solid var(--line-clr);
	top: 15px;
	border-radius: 50%;
	z-index: 1;
}

.left {
	left: 0;
}

.right {
	left: 50%;
}

.left::before {
	content: ' ';
	height: 0;
	position: absolute;
	top: 22px;
	width: 0;
	z-index: 1;
	right: 30px;
	border: medium solid white;
	border-width: 10px 0 10px 10px;
	border-color: transparent transparent transparent var(--line-clr);
}

.right::before {
	content: ' ';
	height: 0;
	position: absolute;
	top: 22px;
	width: 0;
	z-index: 1;
	left: 30px;
	border: medium solid white;
	border-width: 10px 10px 10px 0;
	border-color: transparent var(--line-clr) transparent transparent;
}

.right::after {
	left: -16px;
}

.timeline-content {
	padding: 20px 30px;
	background-color: var(--bg2-color);
	position: relative;
	border-radius: 6px;
	-webkit-box-shadow: var(--box-shadow);
	box-shadow: var(--box-shadow);
}

.time {
	position: absolute;
	top: 2px;
	margin: 0;
	padding: 4px 12px;
	border: 1px solid var(--border);
	z-index: 5;
	border-radius: 18px;
	-webkit-transition: 300ms linear;
	-o-transition: 300ms linear;
	transition: 300ms linear;
	background-color: var(--box-clr);
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

@media screen and (min-width: 770px) {
	.time-1 {
		right: -170px;
	}

	.time-2 {
		left: -200px;
	}

	.time-3{
		right: -200px;
	}

	.time-4{
		right: -160px;
	}

	.time-5{
		left: -170px;
	}

	.time-6{
		right: -150px;
	}
}

.timeline-content p,
h3,
h5 {
	font-family: 'Quicksand', sans-serif;
}

/* Making Timeline Responsive */

@media screen and (max-width: 770px) {
	.timeline::after {
		left: 31px;
	}

	.timeline-container {
		width: 100%;
		padding-left: 70px;
		padding-right: 25px;
	}

	.timeline-container::before {
		left: 60px;
		border-width: 10px 10px 10px 0;
	}

	.left::after,
	.right::after {
		left: 15px;
	}

	.left::before {
		border-width: 10px 10px 10px 0;
		border-color: transparent var(--line-clr) transparent transparent;
	}

	.right {
		left: 0%;
	}

	.time {
		border: none;
		position: relative;
		width: 175px;
		margin: 10px auto;
	}
	.time h5 {
		font-size: 20px;
	}
	.time-1 {
		right: 215px;
	}
	.time-2 {
		left: -215px;
	}
}
@media screen and (max-width: 760px){
	.time {
		border: 1px solid var(--time-border);
	}
}


@media screen and (max-width: 767px) {
	.time-1 {
		right: 125px;
	}
	.time-2 {
		left: -125px;
	}
}
@media screen and (max-width: 560px) {
	.time-1 {
		right: 0px;
	}
	.time-2 {
		left: 0px;
	}
}

@media screen and (max-width: 395px) {
	.time {
		position: relative;
		max-width: 95%;
		margin: 10px;
	}

	.timeline-content {
		padding: 7px 12px;
		position: relative;
	}

	.timeline-content h3 {
		font-size: 25px;
	}

	.timeline-content p {
		font-size: 15px;
	}

	.timeline-container {
		width: 100%;
		padding-left: 57px;
		padding-right: 5px;
		padding-bottom: 30px;
	}
}

.line {
	background-color: var(--br-clr);
	border-top: 0.5px solid rgba(0, 0, 0, 0.1);
}

.line1{
	margin-top: 0.5rem; 
	margin-bottom: 0.75rem; 
	background-color: var(--line1-clr);
}

.description {
	letter-spacing: 0.5px;
	color: var(--font-color);
}

@media only screen and (max-width: 1199px) {
	.font-weight-bolder {
		text-align: center;
	}
	.timeline-content h3 {
		font-size: 24px;
		text-align: center;
	}
}
@media only screen and (max-width: 991px) {
	.timeline-content h3 {
		font-size: 20px;
	}
	.description {
		font-size: 15px;
	}
	
	.time {
		-webkit-transform: scale(0.8);
		-ms-transform: scale(0.8);
		transform: scale(0.8);
	}
}

@media screen and (max-width: 396px) {
	.timeline-container::before {
		left: 46px;
	}
	.time {
		margin: auto;
	}
}

@media screen and (max-width: 403px) and (min-width: 396) {
	.timeline-container::before {
		left: 60px;
	}
}

